<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="240dp"
        android:src="@color/purple_200"
        android:contentDescription="@string/iv_poster_content_desc" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/tv_genre"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/genre"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btn_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="bookmark this film"
        android:drawableLeft="@drawable/ic_bookmark_outline"/>

    <TextView
        android:id="@+id/tv_sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/sinopsis"
        android:textSize="20sp"/>
</LinearLayout>